# pyfixm

./: .gitignore  Dockerfile  Dockerfile.ubuntu  LICENSE  Pipfile  README.rst  base_schema.xsd  pyproject.toml  test_schema.py
resources/: base_schema.xsd  get_license.py
scripts/: build.py
