[tool.poetry]
name = "pyfixm"
version = "0.1.1"
description = "Parses FIXM data into Python datastructures"
authors = ["Bryce Beagle"]
maintainers = ["Tyler Compton"]
readme = "README.rst"
homepage = "https://github.com/sync-or-swim/pyfixm"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
include = [
    "pyfixm/LICENSE",
    "pyfixm/*.py",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sync-or-swim/pyfixm/issues"

[tool.poetry.dependencies]
python = "^3.6"
six = "^1.14.0"

[tool.poetry.dev-dependencies]
docker = "^4.2.0"
pygments = "^2.5.2"  # Used by PyCharm to render .rst files

[build-system]
requires = ["poetry>=1.0.0", "docker>=4.2.0"]
build-backend = "poetry.masonry.api"
